# SahaniR

./: .gitignore  Cargo.toml  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  LICENSE  README.md
sahanir/: Cargo.toml
sahanir-cli/: Cargo.toml
sahanir-cli/src/: main.rs  new_project.rs
sahanir-cli/template/: Cargo.toml.hbs
sahanir-cli/template/src/: controllers.rs  main.rs
sahanir-macros/: Cargo.toml
sahanir-macros/src/: lib.rs
sahanir/src/: core.rs  lib.rs  security.rs  web.rs
sahanir/src/web/: controller.rs  mod.rs
