[package]
name = "sahanir-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
fs_extra = "1.3.0"
handlebars = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = { version = "0.7.3", features = ["glob"] }
