[package]
name = "sahanir"
version = "0.1.0"
edition = "2021"

[dependencies]
sahanir-macros = { version = "0.1.0", path = "../sahanir-macros" }
tokio = { version = "1", features = ["full"] }
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
